# tarbiyat

./: .env.example  .gitignore  AUTHENTICATION_TEMPLATES.md  CONTRIBUTING.md  DEPLOYMENT.md  GPGC_Testing_Checklist.md  README.md  Review Report by GPGC Internship Office.md  TEMPLATE_VALIDATION.md  TESTING.md  app.yaml  pyproject.toml  requirements.txt  run_tests.py  tailwind.config.js  test_resume_delete.py  validate_templates.py
.github/: copilot-instructions.md
app/: account_adapters.py  adapters.py  admin.py  email_utils.py  forms.py  middleware.py  models.py  test_models.py  test_utils.py  test_views.py  tests.py  urls.py  utils.py  views.py
app/fixtures/: institutes.json
app/migrations/: 0001_initial.py  0002_alter_company_address_alter_company_contact_email_and_more.py  0002_alter_studentprofile_resume.py  0003_add_domain_verification.py  0003_alter_company_website_alter_internship_final_grade_and_more.py  0004_company_approved_at_company_approved_by_and_more.py  0005_internshipsupervisorevaluation_and_more.py  0006_alter_internship_application_alter_internship_mentor_and_more.py  0007_add_institute_demographics.py  0007_internship_duration_weeks_and_more.py  0008_add_phone_fields.py  0008_attendancerecord_internship.py  0009_rename_year_to_semester.py  0010_allow_reapplication_after_rejection.py  0011_add_phone_to_institute.py  __init__.py
app/templatetags/: user_tags.py
app/tests/: test_basic_urls.py  test_check_templates.py  test_forms.py  test_integration.py  test_models.py  test_urls.py  test_utils.py  test_views.py  (+1 more)
project/: settings.py  urls.py
(+130 files in other folders)
