[project]
name = "tarbiyat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.6",
    "django>=5.2.5",
    "django-allauth>=65.11.1",
    "django-browser-reload>=1.18.0",
    "nanoid>=2.0.0",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "whitenoise>=6.9.0",
]
